# sefenbu

./: .git-mirror.json  .gitignore  Cargo.toml  README-zh.md  README.md
.cargo/: config.toml
shaders/: hsl.wgsl  hsl_2dviz.wgsl  hsl_3dviz.wgsl  hsl_common.wgsl  hsv.wgsl  hsv_2dviz.wgsl  hsv_3dviz.wgsl  hsv_common.wgsl  okhsl.wgsl  okhsl_2dviz.wgsl  okhsl_3dviz.wgsl  okhsv.wgsl  okhsv_2dviz.wgsl  okhsv_3dviz.wgsl  oklab_common.wgsl
src/: cli.rs  controls.rs  main.rs  scene.rs
src/providers/: generic.rs  genericProvider.rs  histgen.rs  hsl.rs  hsluv.rs  hsv.rs  mod.rs  okhsl.rs  okhsv.rs
