[package]
name = "sefenbu"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Visualizes OKHSV color distribution for an image."
homepage = "https://github.com/xiaoshihou514/sefenbu"
repository = "https://github.com/xiaoshihou514/sefenbu"
readme = "README.md"

[dependencies]
bevy = { version = "0.15.2", features = [
  "wayland",
  "jpeg",
  "png",
  "bmp",
  "webp",
] }
clap = { version = "4.5.29", features = ["derive"] }
palette = "0.7.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
